project(PID)
cmake_minimum_required (VERSION 3.5)
add_definitions(-std=c++11)
set(CXX_FLAGS "-W1")
set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    
    include_directories(C:/vcpkg/packages/uwebsockets_x86-windows/include)
    include_directories(C:/vcpkg/packages/libssh2_x86-windows/include)
    include_directories(C:/vcpkg/packages/libuv_x86-windows/include)
    include_directories(C:/vcpkg/packages/openssl_x86-windows/include)
    include_directories(C:/vcpkg/packages/zlib_x86-windows/include)

    set(sources src/PID.cpp src/main.cpp)
    set_source_files_properties(${sources} PROPERTIES COMPILE_FLAGS "-D_USE_MATH_DEFINES")

else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    set(sources src/PID.cpp src/main.cpp)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
    include_directories(/usr/local/include)
    include_directories(/usr/local/opt/openssl/include)
    link_directories(/usr/local/lib)
    link_directories(/usr/local/opt/openssl/lib)
    link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
add_executable(pid ${sources})
if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    target_link_libraries(pid z ssl uv uWS)
endif(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")